name:                tom-parser
version:             0.1.0.0
author:              Paul Brauner
maintainer:          polux2001@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable tom-parser
  main-is:             Main.hs
  build-depends:       base >=4 && <5,
                       megaparsec,
                       colorful-monoids
                       
  default-language:    Haskell2010
